...
              ],
              bottom: TabBar(
                labelColor: theme.text,
                unselectedLabelColor: theme.subtleText,
                indicatorColor: theme.text,
                tabs: const [
                  Tab(text: 'BALLS'),
                  Tab(text: 'RINGS'),
                  Tab(text: 'PACKS'),
                ],
              ),
            ),
            body: TabBarView(
              children: [
...
